fixed spacing issue homepage

--- a/css/main.scss
+++ b/css/main.scss
@@ -350,6 +350,10 @@ body {
       section {
         padding-top: 75px;
 
+        &#about {
+          margin-bottom: 40px;
+        }
+
         &#about, &#faq {
           padding-top: 50px;
         }
